--- a/index.html
+++ b/index.html
@@ -35,20 +35,27 @@
 
   </div>
 </header>
-
+    
 <main>
 
   <!-- ================= START ================= -->
 
   <section id="start" class="hero">
-    <h1>Pilzsachverständige in der Nordheide – Pilzberatung & Lehrwanderungen</h1>
+    <h1>Pilzberatung & Lehrwanderungen im Raum Tostedt</h1>
 
     <p class="intro">
-      Als zertifizierte Pilzsachverständige und Pilzcoach der Deutschen Gesellschaft für Mykologie (DGfM)
-      berate ich zu Speisepilzen und Giftpilzen und begleite Menschen
-      auf achtsamen Entdeckungen durch die Welt der Pilze –
-      im Raum Tostedt sowie in der Nordheide zwischen Buchholz,
-      Hollenstedt, Sittensen, Schneverdingen und Rosengarten.
+      Willkommen auf meiner Seite. Ich bin Pilzsachverständige der Deutschen Gesellschaft für Mykologie (DGfM) und biete Interessierten Pilzberatungen und Lehrwanderungen an.
+      Meine Angebote finden im Raum Tostedt sowie in der umliegenden Region zwischen Buchholz in der Nordheide, Hollenstedt, Sittensen, Schneverdingen und Rosengarten statt.
+    </p>
+
+    <p>
+      Egal ob ihr zum ersten Mal Speisepilze sammeln möchtet oder euch bereits gut auskennt und eure Artenkenntnis vertiefen wollt – bei meinen Pilztouren gehe ich auf alle Teilnehmer ein.
+      Die Touren sind für Anfänger und Fortgeschrittene gleichermaßen geeignet.
+    </p>
+
+    <p>
+      Der Fokus liegt dabei auf Pilzen als Lebewesen und ihrer Rolle im Ökosystem – nicht nur auf Speisepilzen.
+      Natürlich kläre ich über essbare Pilze, giftige Doppelgänger und den verantwortungsvollen Umgang mit Wildpilzen auf.
     </p>
   </section>
 
@@ -58,157 +65,202 @@
   </section>
 
 
-  <!-- ================= PILZBERATUNG ================= -->
-
-  <section class="text-block">
-    <h2>Pilzberatung & Aufklärung</h2>
-
-    <p>
-      Ich kläre über essbare Pilze, giftige Doppelgänger und
-      den verantwortungsvollen Umgang mit Wildpilzen auf.
-      Fachlich fundiert, sachlich und verständlich.
-    </p>
-
-    <h2>Pilze als Lebewesen im Ökosystem</h2>
-
-    <p>
-      Pilze sind weit mehr als Sammelobjekte.
-      Sie sind eigenständige Organismen mit zentraler Rolle
-      im Waldökosystem. Sie verbinden Bäume über Mykorrhiza,
-      zersetzen Totholz und schaffen Lebensräume.
-    </p>
-
-    <p>
-      Mein Fokus liegt auf dem genauen Hinsehen –
-      mit Lupe, mit Geduld und mit Respekt.
-      Auch Flechten, Moose und das Zusammenspiel im Wald
-      gehören für mich dazu.
-    </p>
-
-    <p>
-      Wer an meinen Exkursionen teilnimmt,
-      wird den Wald danach mit anderen Augen sehen.
-    </p>
-  </section>
-
-
-  <!-- ================= GALERIE 1 ================= -->
-
-  <section class="image-strip">
-    <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp"
-         alt="Schwarztäubling mit sichtbaren Lamellen im Wald der Nordheide">
-
-    <img src="images/pilzsachverstaendige-nordheide-giftpilz-im-wald.webp"
-         alt="Giftpilz im Wald in der Nordheide">
-
-    <img src="images/pilzsachverstaendige-nordheide-pilzdetails-lamellen.webp"
-         alt="Detailaufnahme eines Pilzes mit Lamellen">
-
-    <img src="images/pilzsachverstaendige-nordheide-pilz-im-heidewald.webp"
-         alt="Pilz im Heidewald der Nordheide">
-  </section>
-
-
   <!-- ================= ÜBER MICH ================= -->
 
-  <section id="ueber-mich">
-    <div class="text-block">
-      <h2>Über mich</h2>
-    </div>
+  <section id="ueber-mich" class="text-block">
+    <h2>Über mich</h2>
+
+    <p>
+      Schon als Kind habe ich mit meiner Familie Pilze gesammelt. Die Anzahl der Arten war sehr begrenzt – zum Glück haben wir nur das gesammelt, was wir sicher kannten.
+      Dort ist sie entstanden: die Freude und die Aufregung darüber, was man wohl finden wird. Denn Pilze suchen ist wie Schatzsuche.
+    </p>
+
+    <p>
+      Dieser Gedanke hat mich im Erwachsenenleben wieder näher an die Pilze gebracht. Durch einen Umzug näher an die Natur habe ich Pilze plötzlich überall wahrgenommen.
+      Ich wollte wissen, was ich vor mir hatte, und diesen faszinierenden Lebewesen einen Namen geben.
+    </p>
+
+    <p>
+      So habe ich Schritt für Schritt meine Artenkenntnis erweitert und die Bandbreite meines Speisepilzprogramms vergrößert.
+      Schließlich wurde mein Interesse immer spezifischer: Ich habe Fachliteratur studiert, an Lehrwanderungen teilgenommen und die Ausbildung zum Pilzcoach der DGfM absolviert.
+      Mit der Prüfung zur Pilzsachverständigen der DGfM habe ich diesen Weg schließlich offiziell abgeschlossen.
+    </p>
+
+    <p>
+      Gleichzeitig habe ich immer häufiger Freunde und Bekannte mit in den Wald genommen und ihnen die Pilze anhand ihrer Merkmale sowie ihre Rolle im Ökosystem erklärt.
+      Diese Begeisterung weiterzugeben und Wissen über Pilze zu vermitteln, ist bis heute meine Motivation.
+    </p>
+
+    <p>
+      Meine Beobachtungen halte ich in naturalistischen Zeichnungen und Aquarellen fest.
+      Sie dienen mir als Fundtagebuch und Nature Journal beim Erarbeiten neuen Wissens.
+      Darüber hinaus zeichne ich auch freiere Pilz- und Naturmotive und fertige Drucke an.
+      Diese teile ich auf meinem Instagram-Kanal unter bunt.fink.
+    </p>
   </section>
 
   <section class="portrait">
-
     <div class="portrait-image">
       <img src="images/pilzsachverstaendige-nordheide-portrait.webp"
-           alt="Pilzsachverständige bei einer Lehrwanderung im Wald der Nordheide">
+           alt="Pilzsachverständige im Wald der Nordheide">
     </div>
-
-    <div class="portrait-text">
-      <p>
-        Ich bin zertifizierte Pilzsachverständige und Pilzcoach
-        der Deutschen Gesellschaft für Mykologie (DGfM).
-        Meine Arbeit verbindet fundierte Artenkenntnis
-        mit Begeisterung für ökologische Zusammenhänge.
-      </p>
-
-      <p>
-        Mein Schwerpunkt liegt in der Aufklärung über
-        Speisepilze, giftige Verwechslungspartner
-        und den verantwortungsvollen Umgang mit Wildpilzen.
-      </p>
-
-      <p>
-        Gleichzeitig fasziniert mich das Unsichtbare:
-        Myzel, Symbiosen, Flechten, Moose und das fein verwobene
-        Netzwerk des Waldes.
-      </p>
-    </div>
-
   </section>
 
 
-  <!-- ================= EXPERTISE ================= -->
+  <!-- ================= ÖKOSYSTEM ================= -->
 
   <section class="text-block">
-    <h2>Expertise & Haltung</h2>
+    <h2>Pilze als Lebewesen im Ökosystem</h2>
 
     <p>
-      Pilze sind eigenständige Lebewesen –
-      keine Pflanzen und keine Randerscheinung.
-      Sie sind Grundlage funktionierender Ökosysteme.
+      Pilze bilden ihr eigenes Reich – sie sind weder Pflanzen noch Tiere und dennoch außerordentlich artenreich.
+      In Niedersachsen gibt es etwa 6.000 verschiedene Pilzarten, aber nur rund 1.200 Arten von Farn- und Blütenpflanzen.
     </p>
 
     <p>
-      In meinen Lehrwanderungen vermittle ich grundlegendes Wissen über Pilze,
-      insbesondere über Speisepilze und giftige Doppelgänger.
-      Ich leite meine Teilnehmer dazu an, ihren Blick zu schärfen
-      und neue Perspektiven im Wald einzunehmen.
-      So wird jeder etwas Neues entdecken.
-      Pilze suchen ist wie Schatzsuche –
-      voller Abenteuer und Freude.
+      Oft bleiben Pilze im Verborgenen, denn ihre Fruchtkörper treten nur kurz in Erscheinung.
+      Ihr eigentliches Lebewesen, das Myzel, ist jedoch ganzjährig im Boden oder im Holz aktiv.
+    </p>
+
+    <p>
+      Für ein funktionierendes Waldökosystem übernehmen sie zentrale Aufgaben:
+      Sie versorgen Pflanzen in einer Mykorrhiza-Symbiose mit Wasser und Nährstoffen
+      und sind maßgeblich an der Zersetzung von Totholz beteiligt.
+    </p>
+
+    <p>
+      Bei meinen Beobachtungen arbeite ich mit Stereolupe und Sporenabdrücken.
+      Wenn ich eine Art sicher identifiziert habe, kartiere ich sie.
+      So entsteht mit der Zeit ein genaueres Bild der Pilzvielfalt in unserer Region rund um Tostedt und die Nordheide.
+    </p>
+
+    <p>
+      Zunehmend beschäftigen mich auch Flechten und Moose und ihre Rolle im fein verwobenen Netzwerk des Waldes.
     </p>
   </section>
 
 
-  <!-- ================= GALERIE 2 ================= -->
+  <!-- ================= GALERIE ================= -->
 
   <section class="image-strip">
-    <img src="images/pilzsachverstaendige-nordheide-fliegenpilz.webp"
-         alt="Fliegenpilz im Moos in der Nordheide, Amanita muscaria">
+    <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp"
+         alt="Schwarztäubling mit Lamellen">
 
-    <img src="images/pilzsachverstaendige-nordheide-steinpilz.webp"
-         alt="Steinpilz im Wald bei Tostedt, Boletus edulis">
+    <img src="images/pilz2.jpg"
+         alt="Giftpilz im Wald der Nordheide">
 
-    <img src="images/pilzsachverstaendige-nordheide-holzritterling.webp"
-         alt="Purpurfilziger Holzritterling im Heidewald">
+    <img src="images/pilz3.jpg"
+         alt="Pilzdetail mit Lamellenstruktur">
 
-    <img src="images/pilzsachverstaendige-nordheide-gelber-knollenblaetterpilz.webp"
-         alt="Gelber Knollenblätterpilz im Wald der Nordheide">
+    <img src="images/pilz4.jpg"
+         alt="Pilz im Heidewald bei Tostedt">
+  </section>
+
+
+  <!-- ================= LEHRWANDERUNGEN ================= -->
+
+  <section class="text-block">
+    <h2>Lehrwanderungen & Pilzberatung</h2>
+
+    <p>
+      In meinen Lehrwanderungen vermittle ich grundlegendes Wissen über Pilze als Lebewesen und ihre Rolle im Ökosystem.
+      Außerdem geht es um den verantwortungsvollen Umgang mit Speisepilzen,
+      ihre wichtigen Bestimmungsmerkmale und die sichere Abgrenzung zu giftigen Doppelgängern.
+    </p>
+
+    <p>
+      Ich leite meine Teilnehmer dazu an, ihren Blick zu schärfen und neue Perspektiven im Wald einzunehmen.
+      So wird jeder etwas Neues entdecken und für sich mitnehmen – denn Pilze suchen ist wie Schatzsuche.
+    </p>
+
+    <p>
+      Die Lehrwanderungen richten sich an naturinteressierte Menschen aus dem Raum Tostedt,
+      Buchholz in der Nordheide, Hollenstedt, Sittensen, Schneverdingen und Rosengarten.
+    </p>
   </section>
 
 
   <!-- ================= TERMINE ================= -->
 
   <section id="termine" class="text-block">
-    <h2>Termine</h2>
+    <h2>Termine für Lehrwanderungen</h2>
 
     <p>
-      Hier findest du aktuelle Termine für Pilzlehrwanderungen,
-      geführte Pilzexkursionen und naturkundliche Veranstaltungen
-      im Raum Tostedt und in der Nordheide.
+      Hier findest du die Termine meiner aktuell geplanten Lehrwanderungen im Raum Tostedt.
+      Wenn du frühzeitig über neue Termine informiert werden möchtest, melde dich gerne für meinen Newsletter an.
     </p>
 
-    <p>Beispieltermin 1</p>
-    <p>Beispieltermin 2</p>
-    <p>Beispieltermin 3</p>
-    <p>Beispieltermin 4</p>
-    <p>Beispieltermin 5</p>
+    <p>
+      Gerne biete ich auch Lehrwanderungen für private Gruppen oder Vereine an.
+      Kinder sind herzlich willkommen. Schreib mir hierfür einfach eine E-Mail.
+    </p>
+
+    <h3>Nächster Termin</h3>
+    <p>
+      Oktober 2026<br>
+      10:00 – 13:00 Uhr<br>
+      Lehrwanderung im Raum Tostedt – Plätze frei
+    </p>
+
+    <h3>Preise</h3>
+    <p>
+      Erwachsene: 30,- € pro Person<br>
+      Kinder bis 10 Jahre: kostenfrei, bitte mit anmelden
+    </p>
+
+    <h3>Anmeldung</h3>
+    <p>
+      Anmeldung per E-Mail an:
+      <a href="mailto:pilze-nordheide@posteo.de">pilze-nordheide@posteo.de</a>
+    </p>
 
     <p>
-      Neue Termine werden fortlaufend ergänzt.
-      Wenn du informiert bleiben möchtest, folge mir gerne auf Instagram
-      oder schreibe mir direkt.
+      Bei der Anmeldung bitte Vor- und Nachname sowie eine Telefonnummer für eine kurzfristige Erreichbarkeit
+      (z. B. bei Ausfall) angeben. Es werden nur Anmeldungen mit vollständigen Angaben berücksichtigt.
+    </p>
+
+    <p>
+      Die Anmeldung wird schriftlich per E-Mail bestätigt.
+      Die Plätze werden in der Reihenfolge des Eingangs vergeben.
+    </p>
+
+    <p>
+      Sollte eine Teilnahme nicht möglich sein, ist die Gebühr bis spätestens eine Woche vor der Lehrwanderung zu entrichten,
+      es sei denn, es findet sich ein Ersatzteilnehmer.
+    </p>
+  </section>
+
+
+  <!-- ================= HINWEISE ================= -->
+
+  <section class="text-block">
+    <h2>Wichtige Hinweise zu den Lehrwanderungen</h2>
+
+    <p>
+      Pilze sind ein essenzieller Bestandteil unserer Umwelt.
+      Ihr Vorkommen hängt stark von Standort, Niederschlag und Temperatur ab.
+      Deshalb gibt es keine Garantie, bestimmte Arten zu finden
+      oder mit einem gefüllten Speisepilzkorb nach Hause zu gehen.
+    </p>
+
+    <p>
+      Ziel der Lehrwanderung ist es, Pilze als Lebewesen besser kennenzulernen
+      und Speisepilze sicher anhand ihrer Merkmale von Giftpilzen zu unterscheiden.
+    </p>
+
+    <p>
+      Speisepilze dürfen nach einer Korbkontrolle durch eine Pilzsachverständige mitgenommen werden.
+      Diese findet im Anschluss an die Lehrwanderung statt.
+    </p>
+
+    <p>
+      Zahlung zu Beginn der Lehrwanderung in bar oder vorab per Überweisung oder PayPal (ohne Käuferschutz).
+    </p>
+
+    <p>
+      Die Teilnahme erfolgt auf eigene Gefahr.
+      Wir bewegen uns im Wald, auch abseits befestigter Wege.
+      Das Risiko einer Verletzung trägt jeder Teilnehmer selbst.
     </p>
   </section>
 
