--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       Meine Angebote finden im Raum Tostedt sowie in der umliegenden Region zwischen Buchholz in der Nordheide, Hollenstedt, Sittensen, Schneverdingen und Rosengarten statt.
     </p>
 
+ <section class="image-full">
+    <img src="images/pilzsachverstaendige-nordheide-pilze-im-wald-in-der-nordheide.webp"
+         alt="Pilze und Pilzkorb mit Speisepilzen im Wald der Nordheide bei Tostedt">
+  </section>
+    
     <p>
       Egal ob ihr zum ersten Mal Speisepilze sammeln möchtet oder euch bereits gut auskennt und eure Artenkenntnis vertiefen wollt – bei meinen Pilztouren gehe ich auf alle Teilnehmer ein.
       Die Touren sind für Anfänger und Fortgeschrittene gleichermaßen geeignet.
@@ -59,11 +64,21 @@
     </p>
   </section>
 
-  <section class="image-full">
-    <img src="images/pilzsachverstaendige-nordheide-pilze-im-wald-in-der-nordheide.webp"
-         alt="Pilze und Pilzkorb mit Speisepilzen im Wald der Nordheide bei Tostedt">
-  </section>
+  <!-- ================= GALERIE ================= -->
 
+  <section class="image-strip">
+    <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp"
+         alt="Schwarztäubling mit Lamellen">
+
+    <img src="images/pilz2.jpg"
+         alt="Giftpilz im Wald der Nordheide">
+
+    <img src="images/pilz3.jpg"
+         alt="Pilzdetail mit Lamellenstruktur">
+
+    <img src="images/pilz4.jpg"
+         alt="Pilz im Heidewald bei Tostedt">
+  </section>
 
   <!-- ================= ÜBER MICH ================= -->
 
