--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     <h2>Über mich</h2>
 
     <p>
-      Schon als Kind habe ich mit meiner Familie Pilze gesammelt. Die Anzahl der Arten war sehr begrenzt – zum Glück haben wir nur das gesammelt, was wir sicher kannten.
-      Dort ist sie entstanden: die Freude und die Aufregung darüber, was man wohl finden wird. Denn Pilze suchen ist wie Schatzsuche.
+      Schon als Kind habe ich mit meiner Familie Pilze gesammelt. Die Anzahl der Arten war begrenzt – denn zum Glück haben wir nur das gesammelt, was wir sicher kannten.
+      Aber hier sie entstanden: die Freude und die Aufregung darüber, was man wohl finden wird. Denn Pilze suchen ist wie Schatzsuche.
     </p>
 
     <p>
@@ -110,7 +110,7 @@
       Meine Beobachtungen halte ich in naturalistischen Zeichnungen und Aquarellen fest.
       Sie dienen mir als Fundtagebuch und Nature Journal beim Erarbeiten neuen Wissens.
       Darüber hinaus zeichne ich auch freiere Pilz- und Naturmotive und fertige Drucke an.
-      Diese teile ich auf meinem Instagram-Kanal unter bunt.fink.
+      Diese Kunstwerke und weiteres Pilz- und Naturwissen teile ich auf meinem Instagram Kanal unter bunt.fink.
     </p>
   </section>
 
@@ -129,15 +129,12 @@
 
     <p>
       Pilze bilden ihr eigenes Reich – sie sind weder Pflanzen noch Tiere und dennoch außerordentlich artenreich.
-      In Niedersachsen gibt es etwa 6.000 verschiedene Pilzarten, aber nur rund 1.200 Arten von Farn- und Blütenpflanzen.
+      In Niedersachsen gibt es etwa 6.000 verschiedene Pilzarten, aber nur rund 2.300 Arten von Farn- und Blütenpflanzen.
     </p>
 
     <p>
       Oft bleiben Pilze im Verborgenen, denn ihre Fruchtkörper treten nur kurz in Erscheinung.
-      Ihr eigentliches Lebewesen, das Myzel, ist jedoch ganzjährig im Boden oder im Holz aktiv.
-    </p>
-
-    <p>
+      Ihr Myzel, ist jedoch ganzjährig im Boden oder im Holz aktiv. Denn Pilze sind Fadenwesen und sie bestehen hauptsächlich aus feinen Myzelsträngen.
       Für ein funktionierendes Waldökosystem übernehmen sie zentrale Aufgaben:
       Sie versorgen Pflanzen in einer Mykorrhiza-Symbiose mit Wasser und Nährstoffen
       und sind maßgeblich an der Zersetzung von Totholz beteiligt.
@@ -203,11 +200,8 @@
     <p>
       Hier findest du die Termine meiner aktuell geplanten Lehrwanderungen im Raum Tostedt.
       Wenn du frühzeitig über neue Termine informiert werden möchtest, melde dich gerne für meinen Newsletter an.
-    </p>
-
-    <p>
       Gerne biete ich auch Lehrwanderungen für private Gruppen oder Vereine an.
-      Kinder sind herzlich willkommen. Schreib mir hierfür einfach eine E-Mail.
+      Kinder sind dabei immer herzlich willkommen. Schreib mir hierfür einfach eine E-Mail.
     </p>
 
     <h3>Nächster Termin</h3>
@@ -264,8 +258,7 @@
     </p>
 
     <p>
-      Speisepilze dürfen nach einer Korbkontrolle durch eine Pilzsachverständige mitgenommen werden.
-      Diese findet im Anschluss an die Lehrwanderung statt.
+      Speisepilze dürfen nach einer Lehrwanderung nur nach einer Korbkontrolle durch einen Pilzsachverständigen mit nach Hause genommen werden. Diese wird im Anschluss an die Lehrwanderung durchgeführt. Bitte plant dafür ausreichend Zeit ein.
     </p>
 
     <p>
