--- a/index.html
+++ b/index.html
@@ -262,6 +262,18 @@
     </p>
 
     <p>
+      Die Lehrwanderung dauert ca. 3 Stunden. Maximale Teilnehmer Anzahl beträgt 15 Personen. 
+    </p>
+
+    <p>
+      Der genaue Treffpunkt wird den Teilnehmern ein 4 - 7 Tage vor der Lehrwanderung per e-mail mitgeteilt. Bitte auch den Spam Ordner checken.
+    </p>
+
+    <p>
+       Mitzubringen: festes Schuhwerk, wetterfeste Kleidung, lange Beinkleidung (Zecken), optional ein kleines Messer und ein Pilzkorb. Wer hat, kann gerne eine kleine Lupe und Bestimmungsliteratur mitbringen.
+    </p>
+
+    <p>
       Zahlung zu Beginn der Lehrwanderung in bar oder vorab per Überweisung oder PayPal (ohne Käuferschutz).
     </p>
 
@@ -269,6 +281,9 @@
       Die Teilnahme erfolgt auf eigene Gefahr.
       Wir bewegen uns im Wald, auch abseits befestigter Wege.
       Das Risiko einer Verletzung trägt jeder Teilnehmer selbst.
+    </p>
+    <p>
+     Die Lehrwanderung findet bei jedem Wetter, auch bei Regen, statt. Eine Absage der Lehrwanderung kann aufgrund von extremer Trockenheit, Unwetters oder Krankheit kurzfristig erfolgen. Ich sind in diesem Fall jedoch bemüht, einen Ersatztermin zu finden.
     </p>
   </section>
 
