--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
   <!-- ================= GALERIE ================= -->
 
   <section class="image-strip">
+    <img src="images/pilzsachverstaendige-nordheide-fliegenpilz.webp"
+         alt="Fliegenpilz als Giftpilz in Buchholz in der Nordheide">
+
+    <img src="images/pilzsachverstaendige-nordheide-steinpilz.webp"
+         alt="Steinpilz im Wald der Nordheide">
+
+    <img src="images/pilzsachverstaendige-nordheide-holzritterling.webp"
+         alt="Purpurfilziger Holzritterling in Schneeverdingen">
+
     <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp"
-         alt="Schwarztäubling mit Lamellen">
-
-    <img src="images/pilz2.jpg"
-         alt="Giftpilz im Wald der Nordheide">
-
-    <img src="images/pilz3.jpg"
-         alt="Pilzdetail mit Lamellenstruktur">
-
-    <img src="images/pilz4.jpg"
          alt="Pilz im Heidewald bei Tostedt">
   </section>
 
