--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <img src="images/pilzsachverstaendige-nordheide-holzritterling.webp"
          alt="Purpurfilziger Holzritterling in Schneeverdingen">
 
-    <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp"
-         alt="Pilz im Heidewald bei Tostedt">
+    <img src="images/pilzsachverstaendige-nordheide-Knollenblätterpilz.webp"
+         alt="Champignon und Gelber Knollenblätterpilz bei Pilzlehrwanderung">
   </section>
 
   <!-- ================= ÜBER MICH ================= -->
