--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
     <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp"
          alt="Schwarztäubling mit Lamellen">
 
-    <img src="images/pilz2.jpg"
-         alt="Giftpilz im Wald der Nordheide">
+    <img src="images/pilzsachverstaendige-nordheide-mykobox.webp"
+         alt="Gesammelte Pilze zur Kartierung und Artbestimmung in Tostedt">
 
-    <img src="images/pilz3.jpg"
-         alt="Pilzdetail mit Lamellenstruktur">
+    <img src="images/pilzsachverstaendige-nordheide-myzel.webp"
+         alt="Myzel bei Pilzlehrwanderung in Hollenstedt">
 
-    <img src="images/pilz4.jpg"
-         alt="Pilz im Heidewald bei Tostedt">
+    <img src="images/pilzsachverstaendige-nordheide-capitotricha-bicolor.webp"
+         alt="Pilzdetail eines Schlauchpilzes vergrößert mit Lupe in Sittensen">
   </section>
 
 
