--- a/index.html
+++ b/index.html
@@ -287,6 +287,22 @@
     </p>
   </section>
 
+    <!-- ================= GALERIE ================= -->
+
+  <section class="image-strip">
+    <img src="images/pilzsachverstaendige-nordheide-violetter-roetelritterling.webp"
+         alt="Violetter Rötelritterling in Kakenstorf">
+
+    <img src="images/pilzsachverstaendige-nordheide-pilzkorb.webp"
+         alt="Mit Maronen gefüllter Speisepilzkorb in Lauenbrück">
+
+    <img src="images/pilzsachverstaendige-nordheide-klebriger-hoernling.webp"
+         alt="Klebriger Hörnling in mystischem Wald in Welle">
+
+    <img src="images/pilzsachverstaendige-nordheide-Reizger.webp"
+         alt="Edel Reizger in der Sonne in Schneverdingen">
+  </section>
+  
 <section id="newsletter" class="text-block">
   <h2>Pilzpost aus der Nordheide</h2>
 
