--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
   <!-- ================= GALERIE ================= -->
 
   <section class="image-strip">
-    <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp"
-         alt="Schwarztäubling mit Lamellen">
+    <img src="images/pilzsachverstaendige-nordheide-flechte.webp"
+         alt="Zweig in Bötersheim mit Flechte und Moos und parasitischem Rosa Kissenpilz">
 
     <img src="images/pilzsachverstaendige-nordheide-mykobox.webp"
          alt="Gesammelte Pilze zur Kartierung und Artbestimmung in Tostedt">
