--- a/index.html
+++ b/index.html
@@ -471,6 +471,11 @@
     </p>
   </section>
 
+   <section class="image-full">
+    <img src="images/pilzsachverstaendige-nordheide-heroabschluss.webp"
+         alt="Pilzillustrationen und Aquarellmalerei mit Fliegenpilz und Helmling und Kuhmaul im Wald bei tostedt">
+  </section>
+
 </main>
 
     <section id="danke" class="text-block danke-section">
