--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@
     <h1>Kontakt</h1>
 
     <p>
-      Du hast Fragen zu einer Pilzberatung, möchtest an einer
-      Pilzwanderung teilnehmen oder einen individuellen Termin
+      Möchtest an einer
+      Pilzlehrwanderung teilnehmen oder einen individuellen Termin
       vereinbaren?
     </p>
 
@@ -455,19 +455,6 @@
 
     <p>
       Ich freue mich über deine Nachricht.
-    </p>
-
-    <p>
-     Hier kommt der Kasten für den Newsletter rein
-      Hier kommt der Kaasten rein.
-       Hier kommt der Kasten für den Newsletter rein
-      Hier kommt der Kaasten rein.
-       Hier kommt der Kasten für den Newsletter rein
-      Hier kommt der Kaasten rein.
-       Hier kommt der Kasten für den Newsletter rein
-      Hier kommt der Kaasten rein.
-       Hier kommt der Kasten für den Newsletter rein
-      Hier kommt der Kaasten rein.
     </p>
   </section>
 
