--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
     <p>
       Schreibe mir gerne eine E-Mail oder kontaktiere mich
       über mein Instagram-Profil.
+      <a href="mailto:pilze-nordheide@posteo.de">pilze-nordheide@posteo.de</a>
     </p>
 
     <p>
