--- a/index.html
+++ b/index.html
@@ -449,8 +449,7 @@
     </p>
 
     <p>
-      Schreibe mir gerne eine E-Mail oder kontaktiere mich
-      über mein Instagram-Profil.
+      Schreibe mir gerne eine E-Mail an:
       <a href="mailto:pilze-nordheide@posteo.de">pilze-nordheide@posteo.de</a>
     </p>
 
