--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- ================= START ================= -->
 
   <section id="start" class="hero">
-    <h1>Pilzberatung & Lehrwanderungen im Raum Tostedt</h1>
+    <h1>Pilzwissen & Lehrwanderungen im Raum Tostedt</h1>
 
     <p class="intro">
       Willkommen auf meiner Seite. Ich bin Pilzsachverständige der Deutschen Gesellschaft für Mykologie (DGfM) und biete Interessierten Pilzberatungen und Lehrwanderungen an.
