--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <p class="intro">
       Willkommen auf meiner Seite. Ich bin Pilzsachverständige der Deutschen Gesellschaft für Mykologie (DGfM) und biete Interessierten Pilzberatungen und Lehrwanderungen an.
-      Meine Angebote finden im Raum Tostedt sowie in der umliegenden Region zwischen Buchholz in der Nordheide, Hollenstedt, Sittensen, Schneverdingen und Rosengarten statt.
+      Meine Angebote finden in Niedersachsen im Raum Tostedt sowie in der umliegenden Region zwischen Buchholz in der Nordheide, Hollenstedt, Sittensen und Schneverdingen statt.
     </p>
 
  <section class="image-full">
