--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -1,14 +1,26 @@
-<h1>Impressum</h1> 
-<p>Angaben gemäß § 5 DDG</p> 
-<p>Finnja Anders<br> 
-Wohnort: 21255 Tostedt <br> 
-Deutschland <br> 
-</p> 
-<p> <strong>Vertreten durch: </strong><br>
+<h1>Impressum</h1>
+
+<h2>Angaben gemäß § 5 DDG</h2>
+
+<p>
 Finnja Anders<br>
-</p> 
-<p><strong>Kontakt:</strong> <br>
-E-Mail: <a>finnja.anders@posteo.de</a></br></p> 
-<p><strong>Verbraucherstreitbeilegung / Universalschlichtungsstelle</strong>
-<br>Wir nehmen nicht an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teil und sind dazu auch nicht verpflichtet.
-</p> 
+21255 Tostedt<br>
+Deutschland
+</p>
+
+<h2>Kontakt</h2>
+<p>
+E-Mail: finnja.anders@posteo.de
+</p>
+
+<h2>Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV</h2>
+<p>
+Finnja Anders<br>
+21255 Tostedt
+</p>
+
+<h2>Verbraucherstreitbeilegung</h2>
+<p>
+Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren
+vor einer Verbraucherschlichtungsstelle teilzunehmen.
+</p>
