--- a/pages/datenschutz.html
+++ b/pages/datenschutz.html
@@ -1,1 +1,87 @@
+<h1>Datenschutzerklärung</h1>
+
+<h2>1. Allgemeine Hinweise</h2>
+<p>
+Der Schutz Ihrer persönlichen Daten ist mir wichtig.
+Die Verarbeitung personenbezogener Daten erfolgt
+im Einklang mit der Datenschutz-Grundverordnung (DSGVO).
+</p>
+
+<h2>2. Verantwortliche Stelle</h2>
+<p>
+Finnja Anders<br>
+21255 Tostedt<br>
+E-Mail: finnja.anders@posteo.de
+</p>
+
+<h2>3. Hosting</h2>
+<p>
+Beim Besuch dieser Website werden automatisch Informationen
+durch den Hosting-Anbieter erfasst (Server-Logfiles).
+Dies sind insbesondere:
+IP-Adresse, Datum und Uhrzeit der Anfrage,
+Browsertyp und Betriebssystem.
+Diese Daten dienen ausschließlich der technischen
+Sicherheit und Stabilität der Website.
+</p>
+
+<h2>4. Kontaktaufnahme per E-Mail</h2>
+<p>
+Wenn Sie mir per E-Mail schreiben, werden Ihre Angaben
+zur Bearbeitung der Anfrage gespeichert.
+Die Daten werden nicht ohne Ihre Einwilligung weitergegeben.
+</p>
+
+<h2>5. Newsletter</h2>
+<p>
+Auf meiner Website besteht die Möglichkeit,
+einen Newsletter zu abonnieren.
+Hierfür wird Ihre E-Mail-Adresse verarbeitet.
+</p>
+
+<p>
+Der Versand des Newsletters erfolgt über den Dienstleister
+Brevo (ehemals Sendinblue),
+Brevo GmbH, Köpenicker Straße 126, 10179 Berlin, Deutschland.
+</p>
+
+<p>
+Brevo verarbeitet die Daten in meinem Auftrag
+auf Grundlage eines Vertrags zur Auftragsverarbeitung
+gemäß Art. 28 DSGVO.
+</p>
+
+<p>
+Die Anmeldung erfolgt im sogenannten Double-Opt-in-Verfahren.
+Dabei erhalten Sie nach der Anmeldung eine E-Mail,
+in der Sie Ihre Anmeldung bestätigen müssen.
+Erst danach wird Ihre E-Mail-Adresse in den Verteiler aufgenommen.
+</p>
+
+<p>
+Sie können den Newsletter jederzeit über den
+Abmeldelink in jeder E-Mail widerrufen.
+</p>
+
+<h2>6. Instagram</h2>
+<p>
+Auf dieser Website ist ein Link zu meinem Instagram-Profil eingebunden.
+Beim Anklicken des Links werden Sie auf die Plattform weitergeleitet.
+Es werden erst Daten übertragen, wenn Sie den Link aktiv anklicken.
+</p>
+
+<h2>7. Ihre Rechte</h2>
+<p>
+Sie haben das Recht auf Auskunft,
+Berichtigung,
+Löschung,
+Einschränkung der Verarbeitung
+sowie auf Datenübertragbarkeit
+gemäß Art. 15–20 DSGVO.
+</p>
+
+<p>
+Zudem haben Sie das Recht,
+sich bei einer Datenschutzaufsichtsbehörde zu beschweren.
+</p>
 
