--- a/index.html
+++ b/index.html
@@ -473,15 +473,7 @@
   </p>
 </section>
 
-    
-<footer>
-  <p>© Pilze Nordheide · 
-     <a href="pages/impressum.html">Impressum</a> · 
-     <a href="pages/datenschutz.html">Datenschutz</a>
-  </p>
-</footer>
-
-<script>
+    <script>
 document.addEventListener("DOMContentLoaded", function () {
 
   const burger = document.getElementById("burger");
@@ -501,8 +493,15 @@ document.addEventListener("DOMContentLoaded", function () {
     });
 
   }
-});
+});  
 </script>
+    
+<footer class="site-footer">
+  <div class="footer-inner">
+    <a href="impressum.html">Impressum</a>
+    <a href="datenschutz.html">Datenschutz</a>
+  </div>
+</footer>
 
 </body>
 </html>
