--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <footer class="site-footer">
   <div class="footer-inner">
     <a href="impressum.html">Impressum</a>
-    <a href="datenschutz.html">Datenschutz</a>
+    <a href="pages/datenschutz.html">Datenschutz</a>
   </div>
 </footer>
 
