--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ document.addEventListener("DOMContentLoaded", function () {
     
 <footer class="site-footer">
   <div class="footer-inner">
-    <a href="impressum.html">Impressum</a>
+    <a href="https://pilze-nordheide.github.io/pilze-nordheide/pages/impressum.html">Impressum</a>
     <a href="https://pilze-nordheide.github.io/pilze-nordheide/pages/datenschutz.html">Datenschutz</a>
   </div>
 </footer>
