--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="header-inner">
 
     <a href="#start" class="logo">
-      <img src="images/logo-pilz.png" alt="Pilze Nordheide Logo">
+      <img src="images/logo-pilz-nordheide.png" alt="Pilze Nordheide Logo">
     </a>
 
     <nav class="main-nav">
