--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -1,7 +1,33 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Impressum – Pilzsachverständige Nordheide</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+<header class="site-header">
+  <div class="header-inner">
+    <div class="logo">
+      <a href="index.html">Pilzsachverständige Nordheide</a>
+    </div>
+
+    <nav class="main-nav">
+      <a href="index.html#start">Start</a>
+      <a href="index.html#ueber-mich">Über mich</a>
+      <a href="index.html#termine">Termine</a>
+    </nav>
+  </div>
+</header>
+
+<main class="legal-page">
+
 <h1>Impressum</h1>
 
 <h2>Angaben gemäß § 5 DDG</h2>
-
 <p>
 Finnja Anders<br>
 21255 Tostedt<br>
@@ -24,3 +50,13 @@ Finnja Anders<br>
 Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren
 vor einer Verbraucherschlichtungsstelle teilzunehmen.
 </p>
+
+</main>
+
+<footer class="site-footer">
+  <a href="impressum.html">Impressum</a>
+  <a href="datenschutz.html">Datenschutz</a>
+</footer>
+
+</body>
+</html>
