--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -2,60 +2,63 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Impressum – Pilzsachverständige Nordheide</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Impressum | Pilze Nordheide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
 
 <header class="site-header">
   <div class="header-inner">
-    <div class="logo">
-      <a href="index.html">Pilzsachverständige Nordheide</a>
-    </div>
+    <a href="../index.html#start" class="logo">
+      <img src="../images/logo-pilz-nordheide.png" alt="Pilze Nordheide Logo">
+    </a>
 
     <nav class="main-nav">
-      <a href="index.html#start">Start</a>
-      <a href="index.html#ueber-mich">Über mich</a>
-      <a href="index.html#termine">Termine</a>
+      <a href="../index.html#ueber-mich">Über mich</a>
+      <a href="../index.html#termine">Termine</a>
+      <a href="../index.html#kontakt">Kontakt</a>
     </nav>
   </div>
 </header>
 
 <main class="legal-page">
 
-<h1>Impressum</h1>
+  <h1>Impressum</h1>
 
-<h2>Angaben gemäß § 5 DDG</h2>
-<p>
-Finnja Anders<br>
-21255 Tostedt<br>
-Deutschland
-</p>
+  <h2>Angaben gemäß § 5 DDG</h2>
+  <p>
+    Finnja Anders<br>
+    21255 Tostedt<br>
+    Deutschland
+  </p>
 
-<h2>Kontakt</h2>
-<p>
-E-Mail: finnja.anders@posteo.de
-</p>
+  <h2>Kontakt</h2>
+  <p>
+    E-Mail: finnja.anders@posteo.de
+  </p>
 
-<h2>Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV</h2>
-<p>
-Finnja Anders<br>
-21255 Tostedt
-</p>
+  <h2>Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV</h2>
+  <p>
+    Finnja Anders<br>
+    21255 Tostedt
+  </p>
 
-<h2>Verbraucherstreitbeilegung</h2>
-<p>
-Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren
-vor einer Verbraucherschlichtungsstelle teilzunehmen.
-</p>
+  <h2>Verbraucherstreitbeilegung</h2>
+  <p>
+    Ich bin nicht bereit oder verpflichtet, an Streitbeilegungsverfahren
+    vor einer Verbraucherschlichtungsstelle teilzunehmen.
+  </p>
 
 </main>
 
 <footer class="site-footer">
-  <a href="impressum.html">Impressum</a>
-  <a href="datenschutz.html">Datenschutz</a>
+  <div class="footer-inner">
+    <a href="impressum.html">Impressum</a>
+    <a href="datenschutz.html">Datenschutz</a>
+    <a href="../index.html">Zurück zur Startseite</a>
+  </div>
 </footer>
 
 </body>
