--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@ document.addEventListener("DOMContentLoaded", function () {
     
 <footer class="site-footer">
   <div class="footer-inner">
-    <a href="https://pilze-nordheide.github.io/pilze-nordheide/pages/impressum.html">Impressum</a>
-    <a href="https://pilze-nordheide.github.io/pilze-nordheide/pages/datenschutz.html">Datenschutz</a>
+    <a href="pages/impressum.html">Impressum</a>
+<a href="pages/datenschutz.html">Datenschutz</a>
   </div>
 </footer>
 
