--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -11,20 +11,29 @@
 
 <header class="site-header">
   <div class="header-inner">
+
     <a href="../index.html#start" class="logo">
       <img src="../images/logo-pilz-nordheide.png" alt="Pilze Nordheide Logo">
     </a>
 
-  <nav class="main-nav">
-  <a href="../index.html#start">Start</a>
-  <a href="../index.html#ueber-mich">Über mich</a>
-  <a href="../index.html#termine">Termine</a>
-  <a href="../index.html#newsletter">Newsletter</a>
-  <a href="../index.html#kontakt">Kontakt</a>
-  <a href="https://www.instagram.com/pilze_nordheide/" target="_blank">Instagram</a>
-</nav>
+    <nav class="main-nav">
+      <a href="../index.html#start">Start</a>
+      <a href="../index.html#ueber-mich">Über mich</a>
+      <a href="../index.html#termine">Termine</a>
+      <a href="../index.html#newsletter">Newsletter</a>
+      <a href="../index.html#kontakt">Kontakt</a>
+      <a href="https://www.instagram.com/pilze_nordheide/" target="_blank">Instagram</a>
+    </nav>
+
+    <div class="burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
   </div>
 </header>
+
 
 <main class="legal-page">
 
