--- a/pages/datenschutz.html
+++ b/pages/datenschutz.html
@@ -36,8 +36,7 @@
 
 
 <main class="legal-page">
-
-  <h1>Datenschutzerklärung</h1>
+<h1>Datenschutzerklärung</h1>
 
 <h2>1. Verantwortliche</h2>
 <p>
@@ -49,42 +48,94 @@ E-Mail: finnja.anders@posteo.de
 
 <h2>2. Hosting</h2>
 <p>
-Diese Website wird über GitHub Pages betrieben, ein Dienst der
-GitHub Inc., 88 Colin P. Kelly Jr. Street, San Francisco, CA 94107, USA.
-Beim Aufruf der Website werden technisch notwendige Daten
-(z.B. IP-Adresse, Browsertyp, Zeitpunkt des Zugriffs)
-durch GitHub verarbeitet.
+Diese Website wird über GitHub Pages betrieben, ein Dienst der GitHub Inc.,
+88 Colin P. Kelly Jr. Street, San Francisco, CA 94107, USA.
 </p>
 
-<h2>3. Kontaktaufnahme</h2>
 <p>
-Wenn Sie per E-Mail Kontakt aufnehmen,
-werden Ihre Angaben zwecks Bearbeitung der Anfrage gespeichert.
-Diese Daten gebe ich nicht ohne Ihre Einwilligung weiter.
+Beim Aufruf der Website werden durch GitHub automatisch Informationen
+in sogenannten Server-Logfiles gespeichert. Dies sind insbesondere:
+IP-Adresse, Datum und Uhrzeit der Anfrage, Browsertyp und Betriebssystem.
 </p>
 
-<h2>4. Newsletter</h2>
+<p>
+Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO
+(berechtigtes Interesse an einer sicheren und stabilen Bereitstellung der Website).
+</p>
+
+<h2>3. SSL- bzw. TLS-Verschlüsselung</h2>
+<p>
+Diese Seite nutzt aus Sicherheitsgründen eine SSL- bzw. TLS-Verschlüsselung.
+Eine verschlüsselte Verbindung erkennen Sie an „https://“ in der Adresszeile.
+</p>
+
+<h2>4. Kontaktaufnahme per E-Mail</h2>
+<p>
+Wenn Sie mich per E-Mail kontaktieren, werden Ihre Angaben zwecks Bearbeitung
+der Anfrage gespeichert. Die Verarbeitung erfolgt auf Grundlage von
+Art. 6 Abs. 1 lit. b DSGVO (vorvertragliche Maßnahmen) oder
+Art. 6 Abs. 1 lit. f DSGVO.
+</p>
+
+<p>
+Die Daten werden gelöscht, sobald sie für den Zweck der Verarbeitung
+nicht mehr erforderlich sind und keine gesetzlichen Aufbewahrungspflichten bestehen.
+</p>
+
+<h2>5. Newsletter</h2>
 <p>
 Für den Versand meines Newsletters nutze ich den Dienst Brevo
-(ehemals Sendinblue), Anbieter: Sendinblue GmbH, Köpenicker Straße 126, 10179 Berlin.
+(ehemals Sendinblue), Anbieter: Sendinblue GmbH,
+Köpenicker Straße 126, 10179 Berlin.
 </p>
 
 <p>
-Wenn Sie sich für den Newsletter anmelden, werden die von Ihnen
-eingegebenen Daten (E-Mail-Adresse) auf den Servern von Brevo gespeichert.
+Wenn Sie sich für den Newsletter anmelden, werden Ihre E-Mail-Adresse
+und ggf. weitere freiwillige Angaben auf den Servern von Brevo gespeichert.
 Die Anmeldung erfolgt im Double-Opt-In-Verfahren.
 </p>
 
 <p>
-Sie können den Newsletter jederzeit über den Abmeldelink
-in jeder E-Mail abbestellen.
+Rechtsgrundlage ist Ihre Einwilligung gemäß Art. 6 Abs. 1 lit. a DSGVO.
+Die Einwilligung kann jederzeit über den Abmeldelink in jeder Newsletter-Mail widerrufen werden.
 </p>
 
-<h2>5. Ihre Rechte</h2>
 <p>
-Sie haben jederzeit das Recht auf Auskunft über Ihre gespeicherten Daten,
-sowie auf Berichtigung, Löschung oder Einschränkung der Verarbeitung.
-Außerdem steht Ihnen ein Beschwerderecht bei der zuständigen
+Mit Brevo wurde ein Vertrag zur Auftragsverarbeitung gemäß Art. 28 DSGVO abgeschlossen.
+Weitere Informationen finden Sie in der Datenschutzerklärung von Brevo.
+</p>
+
+<p>
+Die Daten werden gespeichert, solange das Newsletter-Abonnement besteht.
+</p>
+
+<h2>6. Instagram</h2>
+<p>
+Auf dieser Website ist ein Link zu meinem Instagram-Profil enthalten.
+Beim Anklicken des Links werden Sie auf die Website von Instagram weitergeleitet.
+Dabei gelten die Datenschutzbestimmungen von Instagram.
+</p>
+
+<p>
+Es findet keine automatische Datenübertragung an Instagram statt,
+solange Sie den Link nicht anklicken.
+</p>
+
+<h2>7. Ihre Rechte</h2>
+<p>
+Sie haben jederzeit das Recht auf Auskunft über Ihre gespeicherten Daten
+(Art. 15 DSGVO), auf Berichtigung (Art. 16 DSGVO),
+auf Löschung (Art. 17 DSGVO), auf Einschränkung der Verarbeitung (Art. 18 DSGVO),
+sowie auf Datenübertragbarkeit (Art. 20 DSGVO).
+</p>
+
+<p>
+Sie haben außerdem das Recht, eine erteilte Einwilligung jederzeit
+mit Wirkung für die Zukunft zu widerrufen.
+</p>
+
+<p>
+Zudem steht Ihnen ein Beschwerderecht bei einer
 Datenschutzaufsichtsbehörde zu.
 </p>
 
